Final funcionality added, "rainbow" feature added.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </head>
     <body>
         <h1 class="header">Etch-a-Sketch!</h1>
+        <button type="button" id="new-sketch">New sketch!</button>
+        <input type="checkbox" name="rainbow" id="rainbow-mode" value="on">
+        <label for="checkbox">RAINBOW MODE! :-)</label>
         <div id="pixel-container"></div>
         <h2 class="footer">Made by szkiss04 as part of "The Odin Project" curriculum</h2>
     </body>
